amf-client/shared/src/test/resources/parser-results/error/invalid-type.raml
#%RAML 1.0
title: Chinook RAML 1 Api
types:
  Person:
    properties:
        Id:
            type: integer
        Title?:
        BirthDate?:
        FirstName:
        LastName:
        Address?:
        City?:
        State?:
        Country?:
        PostalCode?:
            type: string
            minLength: 4
            maxLength: 14
        Phone?:
            type: string
            minLength: 8
        Fax?:
        Email?:
        Picture?:
            type: file
  Employee:
    type: Person
    properties:
        HireDate?:
  SupportRepresentant:
    type: Employee
    properties:
        ReportsTo:
            type: Employee
  Customer:
        type: Person
        properties:
          Company:
          CustomerStatus:
            enum: [standard, gold, premium]
  Artist:
    properties:
          Id:
            type: integer
          Name:
    examples:
        one: {
            "Id": 1,
            "Name": "Dave Mathews Band"
          }
        two: {
            "Id": 2,
            "Name": "Pearl Jam"
          }
  Album:
    description: this is the Album RAML type description
    properties:
        Artist:
          type: Artist
        Id:
            type: integer
        Title:
  Track:
        properties:
          Id:
            type: integer
          Name:
          Album:
            type: Album
          MediaType:
              properties:
                Id:
                    type: integer
                Name:
          Genre:
              properties:
                Id:
                    type: integer
                Name:
          Composer:
          Milliseconds:
            type: integer
          Bytes:
            type: integer
          UnitPrice:
            type: number
  InvoiceLine:
    properties:
        Id:
            type: integer
        Track:
            type: Track
        UnitPrice:
            type: number
            minimum: 0
        Quantity:
            type: integer
            minimum: 1
  Invoice:
        properties:
          Customer:
              type: Customer
          InvoiceDate:
          BillingAddress:
          BillingCity:
          BillingState:
          BillingCountry:
          BillingPostalCode:
          Lines:
              type: InvoiceLine[]
  ArtistByTrack:
      type: object
      properties:
          []:
              type: Artist
  TracksByArtist:
      type: object
      properties:
          []:
              type: Track[]